Sat Jan  9 20:22:18 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* stdlib/system.c(system): Avoid store which is never going to be
	read.
	* stdlib/msort.c(qsort_r): Likewise.
	* stdio/fpos.c(fseek): Likewise.
	* unix/features.c(env): Likewise.
	* unix/unix.c(__unixinit): Likewise.
	* signal/post.c(post_signal): Likewise.
	* termios/termcap.c(t_tgetnam): Likewise.
	* common/unixify.c(__unixify): Likewise.
	* stdio/popen.c(__pexec): Avoid NULL dereference.
	* unix/dirent.c(scandir): Likewise.
	* pthread/key.c(pthread_key_create): Likewise.
	* common/serial.c(__get_file_ino): Likewise.
	* time/clk_gettime.c(clock_gettime): case CLOCK_REALTIME, tv_nsec is
	no longer garbage.
	* unix/putenv.c(putenv): strncpy() -> memcpy() micro-optimisation.
	* time/stdtime.c(__standard_time): Avoid pointless ptr arithmetic.
	* include/wchar.h: Upgrade with glibc 2.11 version.
	* include/wctypes.h: Likewise.
	* include/sys/cdefs.h: Likewise.
	* include/features.h: Likewise.
	* include/features.h: Likewise.
	* include/bits/wchar.h: Add glibc 2.11 version.
	* include/bits/wordsize.h: Likewise.
	* include/stdio.h(__FILE): Typedef.
	* wchar/mbsinit.c(mbsinit): Follow wchar.h/wctypes.h header changes.
	* wchar/wcwidth.c(wcwidth): Likewise.
	* wchar/wctype.c(towupper,towlower): Likewise.
	* wchar/mbrtowc.c(mbrtowc): Likewise.
	* incl-local/sys/cdefs.h: Follow sys/cdef.h changes.
	* pwd/getpwnam_r.c(getpwnam_r): Avoid 1 line if statements.
	* incl-local/internal/os.h(__ul_seterr): It is allowed to call this
	with NULL argument.

Thu Jan  7 13:47:15 PST 2010  Peter Naulls  <peter@chocky.org>

	* pwd/getpwnam_r.c(getpwnam_r): Return values weren't being properly
	  set in default case.  Rewrite to do what man page says.

Thu Jan  7 21:54:12 2010  Lee Noar  <leenoar@sky.com>

	* Generally:
	Ideally we want to remove the need for pthread_call_every to
	access the task address space in order to validate it and 
	decide whether to continue setting the callback or not. Once